# Proyecto02SO-QRFS

./: README.md
LectorQR/app/: build.gradle
LectorQR/app/src/main/: AndroidManifest.xml
LectorQR/app/src/main/java/com/example/lectorqr/: MainActivity.java
LectorQR/app/src/main/res/layout/: activity_main.xml
LectorQR/gradle/wrapper/: gradle-wrapper.properties
proyecto02SO/: Cargo.toml
proyecto02SO/src/: fsck_qrfs.rs  main.rs  mkfs_QRFS.rs  mountFS.rs  mount_qrfs.rs  my_QRFS.rs  sesInformation.rs
