[package]
name = "proyecto02SO"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
libc = "0.2"
env_logger = "0.9.0"
log = "0.4.6"
thread-scoped = "1.0.2"
time = "0.3.9"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
qrcode = "0.12.0"
quircs = "0.10.0"
image = "0.24.2"